--- a/shell/android/res/values-large/dimens.xml
+++ b/shell/android/res/values-large/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="padding_large">16dp</dimen>
 
+    <dimen name="slidingmenu_offset">120dp</dimen>
+
 </resources>
