Proper debug icon, Tile background, Standardize font
Standardize listing text, Reduce Toast text size

The toast was nearly a full screen dialog for one line of text

Differentiate the headings from the list items

Increase transparency of tiled background image

Fix an issue with text size for switch compat

--- a/shell/android/res/drawable/background.xml
+++ b/shell/android/res/drawable/background.xml
@@ -8,7 +8,7 @@
 <item>
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
-    android:src="@drawable/menuback"
-    android:tileMode="disabled" />
+    android:src="@drawable/menutile"
+    android:tileMode="repeat" />
 </item>
 </layer-list>
