--- a/shell/android/res/values/styles.xml
+++ b/shell/android/res/values/styles.xml
@@ -16,7 +16,7 @@
         <item name="switchTextAppearance">@style/TextAppearance</item>
     </style>
 
-    <style name="TextAppearance">
+    <style name="TextAppearance" parent="@android:style/TextAppearance.Small">
         <item name="textColor">?android:attr/textColorPrimary</item>
         <item name="textColorHighlight">?android:attr/textColorHighlight</item>
         <item name="textColorHint">?android:attr/textColorHint</item>
@@ -31,10 +31,10 @@
     </style>
 
     <style name="fpsOverlayText">
-        <item name="android:paddingLeft">4px</item>
-        <item name="android:paddingBottom">4px</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
         <item name="android:textColor">#ffff00</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">32dp</item>
         <item name="android:shadowColor">#000000</item>
         <item name="android:shadowDx">1</item>
         <item name="android:shadowDy">1</item>
