--- a/shell/android/res/layout/bios_list_item.xml
+++ b/shell/android/res/layout/bios_list_item.xml
@@ -28,13 +28,12 @@
 
         <TextView
             android:id="@+id/item_name"
+            style="@android:style/TextAppearance.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:text="Something Wrong?"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="18dp" />
+            android:text="Something Wrong?" />
     </LinearLayout>
 
 </RelativeLayout>
