--- a/shell/android/res/layout/mainuilayout_fragment.xml
+++ b/shell/android/res/layout/mainuilayout_fragment.xml
@@ -45,14 +45,13 @@
 
                 <TextView
                     android:id="@+id/menu_heading"
+                    style="@android:style/TextAppearance.Large"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="4dp"
                     android:layout_weight="1"
-                    android:text="@string/app_name"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="32dp" />
+                    android:text="@string/app_name" />
             </LinearLayout>
 
             <FrameLayout
@@ -98,8 +97,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="@string/browser"
-                android:textAppearance="@style/BaseText"
-                android:textSize="28dp" />
+                android:textAppearance="@style/BaseText" />
         </LinearLayout>
 
         <LinearLayout
@@ -129,8 +127,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="@string/settings"
-                android:textAppearance="@style/BaseText"
-                android:textSize="28dp" />
+                android:textAppearance="@style/BaseText" />
         </LinearLayout>
 
         <LinearLayout
@@ -160,8 +157,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="@string/input"
-                android:textAppearance="@style/BaseText"
-                android:textSize="28dp" />
+                android:textAppearance="@style/BaseText" />
         </LinearLayout>
 
         <LinearLayout
@@ -191,8 +187,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="@string/about"
-                android:textAppearance="@style/BaseText"
-                android:textSize="28dp" />
+                android:textAppearance="@style/BaseText" />
         </LinearLayout>
 
         <LinearLayout
@@ -221,8 +216,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="@string/rateme"
-                android:textAppearance="@style/BaseText"
-                android:textSize="28dp" />
+                android:textAppearance="@style/BaseText" />
         </LinearLayout>
 
         <LinearLayout
@@ -252,8 +246,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="@string/cloud"
-                android:textAppearance="@style/BaseText"
-                android:textSize="28dp" />
+                android:textAppearance="@style/BaseText" />
         </LinearLayout>
 
         <LinearLayout
@@ -274,7 +267,7 @@
                 android:layout_margin="2dp"
                 android:gravity="center_vertical|left"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/debug" />
 
             <TextView
                 android:id="@+id/message_title"
@@ -283,8 +276,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="@string/messages"
-                android:textAppearance="@style/BaseText"
-                android:textSize="28dp" />
+                android:textAppearance="@style/BaseText" />
         </LinearLayout>
     </LinearLayout>
 
