--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- name is now in gradle -->
+    <string name="app_name">Reicast</string>
 
     <string name="app_site">http://reicast.com</string>
 
