--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Reicast</string>
+    <!-- moved to gradle -->
 
     <string name="app_site">http://reicast.com</string>
 
