Revert "Merge pull request #1251 from reicast/skmp/dev-names"
Revert "Yet more gradle fixes"

This reverts commit 7160aaeceeb1202772804482c44c7747ed11d704.

Revert "More fixes"

This reverts commit ba568b4dec31221f21168d6f0ae8383218287f17.

Revert "Android: Better use of gradle for suffixes"

This reverts commit f35c93e1ac549aa9c2ded8c2d7bc18ad9a3cbe34.

Revert "Undo hotfix"

This reverts commit a243ac0ee04f14112814dca5266218606b00b081.

Revert "HOTFIX: Fix travis gradle config?"

This reverts commit f2e8ba63e3e2e60255bc20bcd79006de50efcd45.

Revert "Merge pull request #1251 from reicast/skmp/dev-names"

This reverts commit 2f681248df5f7078bb4843083fd11908d0832877, reversing
changes made to e352fb9e9d0732525d0f7eebbc3e9c2395f13baf.

--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- moved to gradle -->
+    <string name="app_name">reicast</string>
 
     <string name="app_site">http://reicast.com</string>
 
