--- a/shell/android-studio/reicast/src/main/res/layout-v14/configure_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout-v14/configure_fragment.xml
@@ -754,11 +754,11 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/cheatdisk_text"
+                    android:id="@+id/boot_disk_text"
                     android:layout_width="wrap_content"
                     android:layout_height="0dip"
                     android:layout_weight="1"
-                    android:text="@string/default_disk" />
+                    android:text="@string/boot_disk" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -766,7 +766,7 @@
                     android:orientation="vertical" >
 
                     <EditText
-                        android:id="@+id/cheat_disk"
+                        android:id="@+id/boot_disk"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
