--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -63,4 +63,8 @@
         <item>K</item>
     </string-array>
 
+    <string-array name="configs">
+        <item>pgc</item>
+    </string-array>
+
 </resources>
