--- a/shell/android-studio/reicast/src/main/res/layout-v14/pgconfig_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout-v14/pgconfig_fragment.xml
@@ -9,6 +9,46 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
+        <TextView
+            android:id="@+id/pgc_docs"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="@string/pgc_doc" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:text="@string/pgc_select_game" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <Spinner
+                    android:id="@+id/config_spinner"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10" >
+
+                    <requestFocus />
+                </Spinner>
+            </LinearLayout>
+        </LinearLayout>
+
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,7 +75,7 @@
                     android:gravity="right"
                     android:orientation="vertical" >
 
-                    <Checkbox
+                    <Switch
                         android:id="@+id/unstable_option"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -63,7 +103,7 @@
                     android:gravity="right"
                     android:orientation="vertical" >
 
-                    <Checkbox
+                    <Switch
                         android:id="@+id/dynarec_safemode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -150,7 +190,7 @@
                     android:gravity="right"
                     android:orientation="vertical" >
 
-                    <Checkbox
+                    <Switch
                         android:id="@+id/render_option"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -178,7 +218,7 @@
                     android:gravity="right"
                     android:orientation="vertical" >
 
-                    <Checkbox
+                    <Switch
                         android:id="@+id/syncrender_option"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -206,14 +246,40 @@
                     android:gravity="right"
                     android:orientation="vertical" >
 
-                    <Checkbox
+                    <Switch
                         android:id="@+id/modvols_option"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="true" />
                 </LinearLayout>
             </TableRow>
+            <TableRow
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical" >
 
+                <TextView
+                    android:id="@+id/apply_pg_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:ems="10"
+                    android:gravity="center_vertical|left"
+                    android:text="@string/save_pgc_title" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:orientation="vertical" >
+
+                    <Button
+                        android:id="@+id/save_pg_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/write_pgc" />
+                </LinearLayout>
+            </TableRow>
         </TableLayout>
     </LinearLayout>
 
