Android: Add dynamic per-player peripheral support
Android: Add a UI shell for implementing peripherals

Android: Replace hardcoded mic assignment with dynamic

Android: Convert mic option to general recording option

Android: Hardcoded VMUs for controller 1

Android: Fix preferences and config for microphone

Android: Add defaults, documentation, and wiring

--- a/shell/android-studio/reicast/src/main/res/layout-v14/input_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout-v14/input_fragment.xml
@@ -148,35 +148,35 @@
                         android:text="@string/launch_editor" />
                 </LinearLayout>
             </TableRow>
-            
-			<TableRow
+
+            <TableRow
                 android:layout_marginTop="25dp"
                 android:gravity="center_vertical" >
 
-			    <LinearLayout 
-			        android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginLeft="6dp"
                     android:gravity="center_vertical" >
-			        
-			        <ImageView 
-			            app:srcCompat="@drawable/mic_icon"
-			            android:layout_width="48dp"
+
+                    <ImageView
+                        app:srcCompat="@drawable/mic_icon"
+                        android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_centerInParent="true"
                         android:scaleType="fitCenter" />
-			        
-	                <TextView
-	                    android:layout_width="0dp"
-	                    android:layout_height="wrap_content"
-	                    android:layout_weight="0.5"
-	                    android:ems="10"
-	                    android:gravity="center_vertical|left"
-	                    android:layout_marginLeft="6dp"
-	                    android:text="@string/mic_in_port_2" />
-				</LinearLayout>
-				
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:ems="10"
+                        android:gravity="center_vertical|left"
+                        android:layout_marginLeft="6dp"
+                        android:text="@string/enable_microphone" />
+                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -185,7 +185,7 @@
                     android:orientation="vertical" >
 
                     <Switch
-                        android:id="@+id/micInPort2"
+                        android:id="@+id/micEnabled"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="true" />
@@ -255,6 +255,15 @@
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:text="@string/controller_none_selected" />
+
+                        <TextView
+                            android:id="@+id/textViewPeripheralsPlayer1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="5dp"
+                            android:ems="10"
+                            android:text="@string/controller_1_vmu" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -337,6 +346,29 @@
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:text="@string/controller_none_selected" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:orientation="horizontal" >
+
+                            <Spinner
+                                android:id="@+id/spnr_player2_periph1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="6"
+                                android:entries="@array/peripherals" />
+
+                            <Spinner
+                                android:id="@+id/spnr_player2_periph2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="6"
+                                android:entries="@array/peripherals" />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -419,6 +451,29 @@
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:text="@string/controller_none_selected" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:orientation="horizontal" >
+
+                            <Spinner
+                                android:id="@+id/spnr_player3_periph1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="6"
+                                android:entries="@array/peripherals" />
+
+                            <Spinner
+                                android:id="@+id/spnr_player3_periph2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="6"
+                                android:entries="@array/peripherals" />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -501,6 +556,29 @@
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:text="@string/controller_none_selected" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:orientation="horizontal" >
+
+                            <Spinner
+                                android:id="@+id/spnr_player4_periph1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="6"
+                                android:entries="@array/peripherals" />
+
+                            <Spinner
+                                android:id="@+id/spnr_player4_periph2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:ems="6"
+                                android:entries="@array/peripherals" />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
